# KUEEE_Keisanki_Ensyu

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu  nvcc_main.bat
first_arxiv/: 1_1_1_bisection.cpp  1_1_1_newton.cpp  1_1_1_newton.cu  1_2_eigen.cpp  1_3_1_multinewton.cpp  1_3_2_multinewton.cpp  hello_pipe_gnu.cpp
libs/: CMakeLists.txt  matrix.cpp  matrix.h  utils.cpp  utils.h
second_arxiv/: 2_1_1_gaussian_eraser.cpp  2_1_2_gs.cpp  2_1_2_jacobi.cpp  2_1_2_sor.cpp  2_1_4_cg.cpp  2_2_1_gaussian_eraser.cpp  2_2_2_gs.cpp  2_2_2_jacobi.cpp  2_2_2_sor.cpp  2_2_4_cg.cpp  2_3_1_gs.cpp  2_3_1_jacobi.cpp  2_3_1_sor.cpp  2_3_2_maxeigen.cpp  2_3_3_cg.cpp
third_archive/: 3_1_1_euler.cpp  3_1_2_euler_ms.cpp  3_1_3_1_heun.cpp  3_1_3_2_heun_ms.cpp  3_1_4_1_RK.cpp  3_1_4_2_RK_ms.cpp  3_2_1_LV.cpp  3_2_2_LV.cpp  3_3_2_smooth.cpp  3_3_3_pulse.cpp
