cmake_minimum_required(VERSION 3.1)
project(Fisrt_Practice CXX)

find_package(OpenMP)

set (CMAKE_CXX_FLAGS "-std=c++17 -O3 ${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -U__STRICT_ANSI__ -mtune=native -march=native")

add_executable(main main.cpp)
add_executable(1_1_1_newton first_arxiv/1_1_1_newton.cpp)
add_executable(1_1_1_bisection first_arxiv/1_1_1_bisection.cpp)
add_executable(1_2_eigen first_arxiv/1_2_eigen.cpp)
add_executable(1_3_1_multinewton first_arxiv/1_3_1_multinewton.cpp)
add_executable(1_3_2_multinewton first_arxiv/1_3_2_multinewton.cpp)
add_executable(2_1_1gaussian_eraser second_arxiv/2_1_1_gaussian_eraser.cpp)
add_executable(2_1_2_jacobi second_arxiv/2_1_2_jacobi.cpp)
add_executable(2_1_2_gs second_arxiv/2_1_2_gs.cpp)
add_executable(2_1_2_sor second_arxiv/2_1_2_sor.cpp)
add_executable(2_1_4_cg second_arxiv/2_1_4_cg.cpp)
add_executable(2_2_1gaussian_eraser second_arxiv/2_2_1_gaussian_eraser.cpp)
add_executable(2_2_2_jacobi second_arxiv/2_2_2_jacobi.cpp)
add_executable(2_2_2_gs second_arxiv/2_2_2_gs.cpp)
add_executable(2_2_2_sor second_arxiv/2_2_2_sor.cpp)
add_executable(2_2_4_cg second_arxiv/2_2_4_cg.cpp)
add_executable(2_3_1_jacobi second_arxiv/2_3_1_jacobi.cpp)
add_executable(2_3_1_gs second_arxiv/2_3_1_gs.cpp)
add_executable(2_3_1_sor second_arxiv/2_3_1_sor.cpp)
add_executable(2_3_2_maxeigen second_arxiv/2_3_2_maxeigen.cpp)
add_executable(2_3_3_cg second_arxiv/2_3_3_cg.cpp)